[gd_scene load_steps=19 format=3 uid="uid://cdde6cofq3xh8"]

[ext_resource type="Script" uid="uid://b51t7csg400n7" path="res://escenario_principal.gd" id="1_06clh"]
[ext_resource type="Texture2D" uid="uid://bua03utyysp1e" path="res://Imagenes/UTEC_fondo.png" id="1_g73bs"]
[ext_resource type="Texture2D" uid="uid://dpfiwokei4ccc" path="res://Imagenes/Ring.png" id="2_ku762"]
[ext_resource type="Texture2D" uid="uid://cwnp1y5mbo73l" path="res://Imagenes/fondoRing.png" id="3_ku762"]
[ext_resource type="Texture2D" uid="uid://cg11ler3rak2f" path="res://Imagenes/Campana.png" id="5_06clh"]
[ext_resource type="AudioStream" uid="uid://51ewqjkrjxn5" path="res://assets/audio/fondodenivel.wav" id="6_ivxvo"]
[ext_resource type="AudioStream" uid="uid://vpne0pxifgn2" path="res://assets/audio/doscampanas.wav" id="7_ivxvo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g73bs"]
size = Vector2(754, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ku762"]
size = Vector2(76.5, 685.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6pwlj"]
size = Vector2(82, 690.125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06clh"]
size = Vector2(925.875, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdanj"]
atlas = ExtResource("5_06clh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivxvo"]
atlas = ExtResource("5_06clh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4h5g"]
atlas = ExtResource("5_06clh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_twww6"]
atlas = ExtResource("5_06clh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_428gr"]
atlas = ExtResource("5_06clh")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x41ih"]
atlas = ExtResource("5_06clh")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3dtjx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdanj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivxvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4h5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twww6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_428gr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x41ih")
}],
"loop": true,
"name": &"default",
"speed": 13.0
}]

[node name="EscenarioPrincipal" type="StaticBody2D"]
script = ExtResource("1_06clh")

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(588, 308)
scale = Vector2(2.12037, 1.93137)
texture = ExtResource("1_g73bs")

[node name="Ring" type="Sprite2D" parent="."]
position = Vector2(585, 297.375)
scale = Vector2(2.13657, 1.58521)
texture = ExtResource("2_ku762")

[node name="RingSuelo" type="Sprite2D" parent="Ring"]
position = Vector2(0, 200.21)
scale = Vector2(0.998919, 0.181828)
texture = ExtResource("3_ku762")

[node name="Colision medio" type="CollisionShape2D" parent="."]
position = Vector2(580, 695)
shape = SubResource("RectangleShape2D_g73bs")

[node name="Colision izq" type="CollisionShape2D" parent="."]
position = Vector2(163.75, 361.375)
shape = SubResource("RectangleShape2D_ku762")

[node name="Colision der" type="CollisionShape2D" parent="."]
position = Vector2(1001, 367.938)
shape = SubResource("RectangleShape2D_6pwlj")

[node name="Colision arr" type="CollisionShape2D" parent="."]
position = Vector2(586, 294)
shape = SubResource("RectangleShape2D_06clh")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Timer"]
position = Vector2(472, 105)
scale = Vector2(4.67578, 4.92773)
sprite_frames = SubResource("SpriteFrames_3dtjx")
frame_progress = 0.868075

[node name="Colision medio2" type="CollisionShape2D" parent="."]
position = Vector2(581, 636)
shape = SubResource("RectangleShape2D_g73bs")

[node name="AudioAmbiente" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ivxvo")
autoplay = true

[node name="AudioCampana" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ivxvo")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
